@@ -1,3 +1,12 @@
+2008-11-16  Jan Nijtmans  <nijtmans@users.sf.net>
+
+	* generic/tcl.decls:   Fix signature and implementation of
+	* generic/tclDecls.h:  Tcl_HashStats, such that it conforms
+	* generic/tclHash.c:   to the documentation.
+	* generic/tclVar.c:
+	* doc/Hash.3
+	* generic/tclDictObj.c Convert Tcl_SetResult call to Tcl_SetObjResult.
+
 2008-11-17  Alexandre Ferrieux 	<ferrieux@users.sourceforge.net>
 
 	* tests/for.test: Check for uncompiled-for-continue [Bug 2186888]
